[package]
name = "uniswap_v3_price_ethers_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0", features = ["rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.79"
num-rational = "0.4.1"
num-bigint = "0.4"
num-traits = "0.2.17"
